tests/error/type_match/tuple_deduced_array_type.bz
// error: unable to match expression of type 'i64' to 'i32'
function test()
{
	let _: [3: auto] = [ 1, 2i8, 3i64 ];
}
